--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <!-- We have putted a board in that our snake will move -->
     <div class="body">
         <div id= "scoreBox">SCORE: 0</div>
-        <div id= "hiscoreBox">Hi SCORE: 0</div>
+        <div id= "hiscoreBox">HI SCORE: 0</div>
         <div id="board"></div>
     </div>
 </body>
